# QOlm

./: .clang-format  .gitignore  .gitmoji-changelogrc  CHANGELOG.md  CInstallLists.txt  CMakeLists.txt  CTestLists.txt  Licence.md  Readme.md  flake.nix
.github/workflows/: generate-changelog-release.yml  gitmoji-changelog.yml  main.yml  nix.yml
cmake/: CPM.cmake  FetchEventpp.cmake  FetchGTest.cmake  FetchQOlm.cmake  PrintConfiguration.cmake  QOlmConfig.cmake.in
docs/: _config.yml  build.md  index.md  quickstartcpp.md  quickstartqml.md
examples/: CMakeLists.txt  Example.cpp  ExampleQml.cpp  ExampleQml.qml  ExampleQml.qrc  ObjectListExample.cpp  QOlmExample.cpp
examples/include/: FooExample.hpp
include/QOlm/: Export.hpp  QOlm.hpp  QOlmBase.hpp
include/QOlm/Details/: QOlmBase.hpp
src/: QOlmBase.cpp  Utils.cpp  Version.cpp  _Template.cpp
src/include/: ObjectListModel.hpp
src/include/ObjectListModel/: Export.hpp  ObjectList.hpp  SharedObjectList.hpp  Utils.hpp  Version.hpp  _Template.hpp
tests/: CMakeLists.txt  ObjectListTests.cpp  QOlmTests.cpp  QOlmTestsQml.cpp  SharedObjectListTests.cpp  tst_QOlmTestsQml.qml
tests/FindPackageTest/: CMakeLists.txt  main.cpp
tests/include/: Foo.hpp  FooList.hpp  FooTest.hpp  SharedFooList.hpp
